--- a/src/main/resources/fxml/DietView.fxml
+++ b/src/main/resources/fxml/DietView.fxml
@@ -20,6 +20,7 @@
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
          <children>
             <Button mnemonicParsing="false" onAction="#showRecipe" text="%cz.afrosoft.whattoeat.dietview.action.show" />
+            <Button mnemonicParsing="false" onAction="#showShoppingList" text="%cz.afrosoft.whattoeat.dietlist.action.shopping" />
          </children></VBox>
       <TableView fx:id="dietViewTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
         <columns>
