--- a/src/main/resources/fxml/DietView.fxml
+++ b/src/main/resources/fxml/DietView.fxml
@@ -20,6 +20,7 @@
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
          <children>
             <Button maxWidth="35.0" minWidth="35.0" mnemonicParsing="false" onAction="#showRecipe" prefWidth="35.0" text="%cz.afrosoft.whattoeat.dietview.action.show" />
+            <Button maxWidth="35.0" minWidth="35.0" mnemonicParsing="false" onAction="#editMeal" prefWidth="35.0" text="%cz.afrosoft.whattoeat.dietview.action.edit" />
             <Button maxWidth="35.0" minWidth="35.0" mnemonicParsing="false" onAction="#showShoppingList" prefWidth="35.0" text="%cz.afrosoft.whattoeat.dietview.action.shopping" />
          </children></VBox>
       <TableView fx:id="dietViewTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
