--- a/src/main/resources/fxml/Menu.fxml
+++ b/src/main/resources/fxml/Menu.fxml
@@ -13,6 +13,7 @@
         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
                 <Button onAction="#showAuthorList" text="%cz.afrosoft.whattoeat.menu.authors"/>
+                <Button onAction="#showCookbookList" text="%cz.afrosoft.whattoeat.menu.cookbooks"/>
                 <Button onAction="#showRecipeList" text="%cz.afrosoft.whattoeat.menu.recipes"/>
                 <Button onAction="#showIngredientList" text="%cz.afrosoft.whattoeat.menu.ingredients"/>
                 <Button onAction="#showFoodList" text="%cz.afrosoft.whattoeat.menu.diet.foodlist"/>
