--- a/src/main/resources/fxml/CookbookDialog.fxml
+++ b/src/main/resources/fxml/CookbookDialog.fxml
@@ -20,11 +20,20 @@
            GridPane.rowIndex="1"/>
     <TextArea fx:id="descriptionArea"
               GridPane.columnIndex="0"
-              GridPane.rowIndex="1"
+              GridPane.rowIndex="2"
               GridPane.columnSpan="2"/>
     <Label text="%cz.afrosoft.whattoeat.cookbook.add.authors"
            GridPane.columnIndex="0"
-           GridPane.rowIndex="2"
-           GridPane.columnSpan="2"/>
+           GridPane.rowIndex="3"/>
+    <Label text="%cz.afrosoft.whattoeat.cookbook.add.authors.name"
+           GridPane.columnIndex="0"
+           GridPane.rowIndex="4"/>
+    <ComboBox fx:id="authorField"
+              GridPane.columnIndex="1"
+              GridPane.rowIndex="4"/>
+    <ListView fx:id="authorList"
+              GridPane.columnIndex="0"
+              GridPane.rowIndex="5"
+              GridPane.columnSpan="2"/>
 
 </GridPane>
