--- a/src/main/resources/fxml/CookbookList.fxml
+++ b/src/main/resources/fxml/CookbookList.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import org.controlsfx.control.MasterDetailPane?>
 <BorderPane
         xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121"
         fx:id="cookbookContainer"
@@ -19,11 +20,21 @@
         </VBox>
     </left>
     <center>
-        <TableView fx:id="cookbookTable" styleClass="cookbook-table">
-            <columns>
-                <TableColumn fx:id="nameColumn" text="%cz.afrosoft.whattoeat.cookbook.table.header.name"/>
-                <TableColumn fx:id="authorColumn" text="%cz.afrosoft.whattoeat.cookbook.table.header.authors"/>
-            </columns>
-        </TableView>
+        <MasterDetailPane fx:id="detailPane" detailSide="RIGHT">
+            <masterNode>
+                <TableView fx:id="cookbookTable" styleClass="cookbook-table">
+                    <columns>
+                        <TableColumn fx:id="nameColumn" text="%cz.afrosoft.whattoeat.cookbook.table.header.name"/>
+                        <TableColumn fx:id="authorColumn" text="%cz.afrosoft.whattoeat.cookbook.table.header.authors"/>
+                    </columns>
+                </TableView>
+            </masterNode>
+            <detailNode>
+                <VBox>
+                    <Label text="%cz.afrosoft.whattoeat.cookbook.detail"/>
+                    <TextArea fx:id="detailArea"/>
+                </VBox>
+            </detailNode>
+        </MasterDetailPane>
     </center>
 </BorderPane>
