--- a/src/main/resources/fxml/IngredientList.fxml
+++ b/src/main/resources/fxml/IngredientList.fxml
@@ -1,46 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import cz.afrosoft.whattoeat.core.gui.component.AddButton?>
+<?import cz.afrosoft.whattoeat.core.gui.component.DeleteButton?>
+<?import cz.afrosoft.whattoeat.core.gui.component.EditButton?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<GridPane minHeight="200.0" minWidth="200.0" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.afrosoft.whattoeat.cookbook.ingredient.gui.controller.IngredientListController">
-  <columnConstraints>
-    <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints fillHeight="false" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <HBox prefHeight="200.0" prefWidth="473.0" GridPane.columnSpan="2" />
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="253.0" GridPane.rowIndex="1">
-         <children>
-            <Separator prefWidth="200.0" />
-            <Label text="%cz.afrosoft.whattoeat.ingredients.actions.title" />
-            <Button maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#addIngredient" prefHeight="30.0" prefWidth="30.0" text="%cz.afrosoft.whattoeat.ingredients.actions.add" />
-            <Button maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#editIngredient" prefHeight="30.0" prefWidth="30.0" text="%cz.afrosoft.whattoeat.ingredients.actions.edit" />
-            <Button maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#deleteIngredient" prefHeight="30.0" prefWidth="30.0" text="%cz.afrosoft.whattoeat.ingredients.actions.delete">
-               <padding>
-                  <Insets top="1.0" />
-               </padding></Button>
-         </children>
-      </VBox>
-      <TableView fx:id="ingredientTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
-         <columns>
-            <TableColumn fx:id="nameColumn" minWidth="200.0" prefWidth="-1.0" text="%cz.afrosoft.whattoeat.ingredients.table.header.name" />
-            <TableColumn fx:id="unitColumn" maxWidth="130.0" minWidth="120.0" prefWidth="75.0" text="%cz.afrosoft.whattoeat.ingredients.table.header.unit" />
-            <TableColumn fx:id="conversionColumn" maxWidth="150.0" minWidth="100.0" prefWidth="75.0" text="%cz.afrosoft.whattoeat.ingredients.table.header.conversion" />
-            <TableColumn fx:id="priceColumn" maxWidth="150.0" minWidth="100.0" prefWidth="200.0" text="%cz.afrosoft.whattoeat.ingredients.table.header.price" />
-            <TableColumn fx:id="keywordColumn" minWidth="200.0" prefWidth="-1.0" text="%cz.afrosoft.whattoeat.ingredients.table.header.keywords" />
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-   </children>
-</GridPane>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<BorderPane
+        xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121"
+        fx:id="ingredientContainer"
+        stylesheets="@../styles/IngredientList.css"
+        styleClass="ingredient-container"
+        fx:controller="cz.afrosoft.whattoeat.cookbook.ingredient.gui.controller.IngredientController">
+    <left>
+        <VBox styleClass="toolbar-button-container">
+            <Label text="%cz.afrosoft.whattoeat.ingredients.actions.title"/>
+            <AddButton onAction="#addIngredient"/>
+            <EditButton fx:id="editButton" onAction="#editIngredient"/>
+            <DeleteButton fx:id="deleteButton" onAction="#deleteIngredient"/>
+        </VBox>
+    </left>
+    <center>
+        <TableView fx:id="ingredientTable" styleClass="ingredient-table">
+            <columns>
+                <TableColumn fx:id="nameColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.name"/>
+                <TableColumn fx:id="unitColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.unit"/>
+                <TableColumn fx:id="priceColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.price"/>
+                <TableColumn fx:id="keywordColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.keywords"/>
+            </columns>
+        </TableView>
+    </center>
+</BorderPane>
